@@ -1,3 +1,9 @@
+2000-08-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
+	* tools/dump-identifiers.c: added simple list of all identifiers.
+
+	* tools/dump-cm.c: minor changes by Andreas.
+
 2000-07-17  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
 	* libsmi-0.2.5.tar.gz: released version 0.2.5.
